@@ -38,6 +38,7 @@ Included
 - Package strict route now requires minimum structural byte-size evidence for `.msix` beyond manifest-only ZIP structure, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.deb` beyond required AR entry names, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires non-ambiguous Debian required-entry cardinality, preventing duplicate required `.deb` structure entries from passing strict package routing.
+- Package strict compressed-tar plugin route now requires non-ambiguous archive entry paths from plugin listing output, preventing duplicate-path ambiguity from passing explicit package archive routing.
 - Package strict route now requires minimum structural byte-size evidence for `.exe` beyond valid PE header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.msi` beyond valid CFB header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.appimage` beyond valid runtime marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
